--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -11,17 +11,21 @@
 <body>
 <h1>Mon super blog</h1>
 <div class="container">
-    <% for(let i = 0; i < 5; i++) { %>
-        <a href="/post">
+
+    <pre>
+        <% JSON.stringify(posts) %>
+    </pre>
+    <% posts.forEach(function (post) { %>
+        <a href="/post/<%= post.slug %>">
             <div class="card">
-                <img src="/img/visual-reverse-image-search-v2_intro.jpg" alt="">
+                <img src="<%= post.image %>" alt="">
                 <div class="card-details">
-                    <h2>Mon post</h2>
-                    <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur doloribus ea earum, harum maiores minima qui tempora temporibus ullam?</p>
+                    <h2><%= post.title %></h2>
+                    <p class="text-secondary"><%= post.description %></p>
                 </div>
             </div>
         </a>
-    <% } %>
+    <% }) %>
 </div>
 </body>
 </html>
